--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "socket.io-client": "^4.6.1",
     "sweetalert2": "^11.7.2",
     "web-vitals": "^2.1.4"
   },
